--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.22.0",
+    "@types/prismic-dom": "^2.1.1",
     "axios": "^0.25.0",
     "faunadb": "4.1.1",
     "next": "12.0.7",
     "next-auth": "^4.2.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -25,6 +28,7 @@
     "@types/react": "^17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "@types/prismic-dom": "^2.1.1"
   }
 }
